--- a/QingDict/Info.plist
+++ b/QingDict/Info.plist
@@ -17,7 +17,7 @@
 	<key>CFBundlePackageType</key>
 	<string>APPL</string>
 	<key>CFBundleShortVersionString</key>
-	<string>1.0</string>
+	<string>1.1</string>
 	<key>CFBundleSignature</key>
 	<string>????</string>
 	<key>CFBundleVersion</key>
@@ -40,7 +40,7 @@
 	<key>NSHighResolutionCapable</key>
 	<true/>
 	<key>NSHumanReadableCopyright</key>
-	<string>Copyright © 2015 YingDev.com. All rights reserved.</string>
+	<string>Copyright © 2015-2016 YingDev.com. All rights reserved.</string>
 	<key>NSMainNibFile</key>
 	<string>StatusWindow</string>
 	<key>NSPrincipalClass</key>
